# patrick

./: .gitignore  README.md  README_ZH.md  chunk-optimization-proposal.md  claude_config_example.json  milestone.md  phase1.md  phase2.md  pyproject.toml  session-summary.md
.github/workflows/: eval.yml
docs/: ARCHITECTURE.md  INSTALL.md  integration-plan.md  milestone.md
docs/phases/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md
docs/zh/: ARCHITECTURE_ZH.md  INSTALL_ZH.md  README_ZH.md
hooks/: post_tool_use.py  prompt_submit.py  session_start.py  stop.py
results/: annotation_candidates.md  baseline_graded.json  baseline_graded_jieba.json  baseline_vector.json  phase1_baseline.json  phase2_hybrid.json
scripts/: annotate_queries.py  cluster_spike.py  eval.py  longmemeval_eval.py  longmemeval_ingest.py  textRankEmbedTest.py  textRankTest.py
scripts/debug/: check_stop_log.py  debug_stop_hook.py
scripts/eval/: annotate_queries.py  eval.py
scripts/research/: estimate_reembed_cost.py  spike_lancedb_merge_insert.py  spike_session_id.py
src/patrick/: __init__.py  cli.py  clustering.py  config.py  dashboard.py  embedding.py  observer.py  server.py  storage.py  summary.py  tools.py
src/patrick/hooks/: __init__.py  post_tool_use.py  session_start.py  stop.py
src/patrick/static/: dashboard.html
tests/eval/: README.md  queries.jsonl
tests/unit/: test_bilingual_embedding.py  test_ndcg.py
