[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patrick-memory"
version = "0.1.0"
description = "Local Claude memory via hooks + MCP"
requires-python = ">=3.10"
dependencies = [
    "fastembed>=0.4.0",
    "lancedb>=0.5.0",
    "tokenizers>=0.15.0",
    "mcp>=1.0.0",
    "uvicorn>=0.29.0",
    "starlette>=0.37.0",
    "typer>=0.12.0",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    # Phase 2: hybrid search + rerank
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    # Phase 6: clustering & visualization
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.5",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
eval = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
patrick = "patrick.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/patrick"]

[tool.hatch.build.targets.wheel.shared-data]
# Hook scripts are plain .py files — include them as package data via
# the normal package discovery (they live in src/patrick/hooks/).
# No extra config needed since hooks/ has __init__.py and is a sub-package.
